fix letter-spacing

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -57,11 +57,14 @@ body{
 .title{
     text-align: center;
     font-size: 35px;
+    letter-spacing: 3px;
     font-variant-caps: all-petite-caps;
+   
 }
 .link{
     text-align: center;
     font-size: 20px;
+    font-weight: lighter;
     margin-top: 6px;
 }
 .link > span{
